cloud/k8s/actuate.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actuate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: actuate
  template:
    metadata:
      labels:
        app: actuate
    spec:
      containers:
      - name: actuate
        image: actuate:latest
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: actuate
spec:
  selector:
    app: actuate
  ports:
    - name: http
      protocol: TCP
      port: 5003
      targetPort: 5003
