cloud/k8s/aggregate.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggregate
  template:
    metadata:
      labels:
        app: aggregate
    spec:
      containers:
      - name: aggregate
        image: aggregate:latest
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: aggregate
spec:
  selector:
    app: aggregate
  ports:
    - protocol: TCP
      port: 5004
      targetPort: 5004
