cloud/k8s/ingestor.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestor
  template:
    metadata:
      labels:
        app: ingestor
    spec:
      containers:
      - name: ingestor
        image: ingestor:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: ingestor
spec:
  selector:
    app: ingestor
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
