cloud/k8s/kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: bitnamilegacy/kafka:3.3
        ports:
        - containerPort: 9092
        - containerPort: 29092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  selector:
    app: kafka
  ports:
    - name: kafka-internal
      protocol: TCP
      port: 9092
      targetPort: 9092
    - name: kafka-external
      protocol: TCP
      port: 29092
      targetPort: 29092
