cloud/k8s/save-data.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: save-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: save-data
  template:
    metadata:
      labels:
        app: save-data
    spec:
      containers:
      - name: save-data
        image: save_data:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: save-data
spec:
  selector:
    app: save-data
  ports:
    - name: http
      protocol: TCP
      port: 5001
      targetPort: 5001
